add migrations and fix bags

--- a/GroceryStore/appsettings.json
+++ b/GroceryStore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ENA\\MSSQLSERVERS;Database=GroceryDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=ENA\\MSSQLSERVERS;Database=GroceryDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
